--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "multer": "^1.3.1",
     "numeral": "2.0.1",
     "object-assign": "4.1.0",
+    "papaparse": "^4.6.2",
     "qs": "4.0.0",
     "queryfilter": "0.0.4",
     "range_check": "1.4.0",
